# voice_assist

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: audio_preprocessing.ipynb
src/: audio_transcription.py  language_understanding.py  main.py
