[project]
name = "voice-assist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "numpy>=2.2.6",
    "openai>=1.93.0",
    "scipy>=1.15.3",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "uvicorn>=0.35.0",
    "whisper>=1.1.10",
]
